--- a/views/posting.handlebars
+++ b/views/posting.handlebars
@@ -2,3 +2,30 @@
   <h2>{{name}}</h2>
   <p>{{description}}</p>
 </div>
+
+<div class="row mt-4">
+  <div class="col-md-6">
+    <h3>Leave A Comment:</h3>
+
+    <form class="form new-comment-form">
+      <div class="form-group">
+        <label for="comment-desc">description:</label>
+
+        <textarea data-id="{{id}}" class="form-input" id="comment-desc" name="comment-desc"></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Post</button>
+      </div>
+    </form>
+    {{#each Comments}}
+    <div>
+      <p>
+        {{body}}
+      </p>
+      <p>
+        username {{user.name}}
+      </p>
+    </div>
+  </div>
+{{/each}}
+<script src="/js/comment.js"></script>
